Fix: execute gameStep function on spacebar and shift to fix delay

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,6 +104,10 @@ body {
     z-index: 1;
 }
 
+.active-menu-item {
+    background-color: black;
+}
+
 /* CONTROLS */
 #how-to-play-screen {
     display: none;
